0.5.0: (Future)
Features:
 - Game Boy support
 - Support for encrypted CodeBreaker GBA cheats
 - Emulation of Vast Fame protected GBA carts (taizou)
 - Tile viewer
 - Threaded rendering mode
 - Libretro: Memory map and achievement support (leiradel)
 - GUI: Add UI control remapping
 - GUI: Add fast-forward
 - Wii: 240p support
Bugfixes:
 - SDL: Fix axes being mapped wrong
 - GBA Memory: Fix mirror on non-overdumped Classic NES games
 - Util: Fix realloc semantics in utf16to8
 - PSP2: Fix GPU crash while exiting
 - PSP2: Fix VSync
 - ARM7: Fix decoding of Thumb ADD (variants 5 and 6)
 - GBA Serialize: Savestates now properly store prefetch
 - PSP2: Fix accelerometer range
 - PSP2: Actually load screen mode setting
 - Qt: Fix bug in software renderer scaling
 - Debugger: Fix GDB breakpoints
 - Wii: Fix framelimiting after a slowdown
 - PSP2: Fix gyroscope direction
 - Qt: Fix hanging key press after disabling autofire
 - PSP2: Delete threads after they return
 - GBA Video: WIN0/1 take priority over OBJWIN
 - PSP2: Fix mapping/unmapping from not at 0
 - Wii: Fix garbage flash at startup
Misc:
 - 3DS: Use blip_add_delta_fast for a small speed improvement
 - OpenGL: Log shader compilation failure
 - Qt: Remove some C99isms from C++ code
 - Windows: Add native VDir support
 - All: Add QUIET parameter to silence CMake
 - ARM7: Support forcing Thumb mode via MSR
 - ARM7: Flush prefetch cache when loading CPSR via MSR
 - OpenGL: Add texSize uniform
 - ARM7: Clean up instruction decoding for future expandability
 - Qt: Make -g flag work in Qt build
 - Qt: Simplify OpenGL context creation
 - Debugger: Support register and memory writes via GDB stub
 - GBA Audio: Force audio DMAs to not increment destination
 - Qt: Thread startup improvements
 - 3DS: Allow UTF-16 filenames
 - 3DS: Port to using citro3D
 - 3DS: Use system font for menus
 - PSP2: Use system font for menus
 - All: Faster memory read/write
 - Qt: Make audio channel/video layer options shortcut mappable