@@ -9,6 +9,7 @@ Features:
  - GUI: Add UI control remapping
  - GUI: Add fast-forward
  - Wii: 240p support
+ - 3DS: Adjustable screen darkening
 Bugfixes:
  - SDL: Fix axes being mapped wrong
  - GBA Memory: Fix mirror on non-overdumped Classic NES games
